fixes about link alignment

--- a/src/client/footer/footer.scss
+++ b/src/client/footer/footer.scss
@@ -24,6 +24,7 @@
 .about {
   @include link($white, $white, $black);
 
+  text-align: left;
   text-decoration: none;
 }
 
